chore: add pagination, search, limit, sort

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -24,3 +24,11 @@
 .fs-48px {
   font-size: 68px;
 }
+
+.hover-unset:hover {
+  background-color: unset !important;
+}
+
+.pointer {
+  cursor: pointer;
+}
